# app/Http/API/routes.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\API\Controllers\AuthController;
+use App\Http\API\Controllers\CityController;
 use App\Http\API\Controllers\ListingController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -16,7 +17,8 @@ Route::prefix('auth')->group(function () {
 });
 
 Route::middleware('auth:sanctum')->group(function () {
-    Route::apiResource('listing', ListingController::class);
+    Route::get('cities', [CityController::class, 'index'])->name('cities.index');
+    Route::apiResource('listings', ListingController::class);
 
     Route::get('/user', function (Request $request) {
         return $request->user();
